<resources>
    <string name="app_name">Inventory App</string>
    <string name="editor_activity_title_add_book">add new book</string>
    <string name="insert_sample_book">insert sample data</string>
    <string name="delete_all_books">delete all books</string>
    <string name="action_save">save</string>
    <string name="action_delete">delete</string>
    <string name="title">title</string>
    <string name="price">price $</string>
    <string name="quantity">quantity</string>
    <string name="supplier_name">supplier name</string>
    <string name="supplier_number">supplier number</string>
    <string name="enter_book_details">enter book details here</string>
    <string name="counting"> books.\n\n</string>
    <string name="insert">type here</string>
    <string name="empty_list">no books to show</string>
    <string name="click_plus">click on + button to add a book</string>
    <string name="add_book_button">Add book</string>
    <string name="reject_book_button">Reject book</string>
    <string name="tap_photo">tap to add photo</string>
    <string name="add_new_book_title">Add new book</string>
    <string name="edit_book_title">Edit book</string>
    <string name="intent_type">image/*</string>
    <string name="select_image">Select image</string>
    <string name="editor_title_error">Book title is required</string>
    <string name="editor_description_error">Book description is required</string>
    <string name="editor_price_error">Book price is required</string>
    <string name="editor_quantity_error">Book quantity is required</string>
    <string name="editor_image_error">Book image is required</string>
    <string name="editor_supplier_number_error">Book supplier number is required</string>
    <string name="editor_supplier_name_error">Book supplier name is required</string>
    <string name="editor_insert_book_failed">insert book failed</string>
    <string name="editor_insert_book_successful">insert book successful</string>
    <string name="editor_update_book_failed">update failed</string>
    <string name="editor_update_book_successful">update successful</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>


    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this item?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Item deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting item</string>

    <string name="toast_out_of_stock_msg">Product is out of stock!</string>

    <string name="error_msg_stock_update">Issue with upload value of quantity</string>

    <!-- Toast message about sold item -->
    <string name="buy_msg_confirm">Item has been sold</string>

    <!-- Toast message: validation of missing product in stock -->
    <string name="no_product_in_stock">No available product in stock</string>

    <!-- Label for stock -->
    <string name="in_stock">In stock:</string>
    <string name="price_header">price</string>
    <string name="quantity_header">quantity</string>


</resources>
